# learning-cross-compile

./: .gitignore  CMakeLists.txt  CMakePresets.json  docker-compose.yaml
.devcontainer/: Dockerfile
.github/workflows/: cross-compile.yml
cmake/: HunterConfig.cmake  HunterGate.cmake
src/: main.cpp
